--- a/investments.html
+++ b/investments.html
@@ -12,48 +12,46 @@
       color: #333;
       margin: 0;
       line-height: 1.8;
-      font-size: 18px;
+      font-size: clamp(16px, 1.2vw, 18px);
     }
 
-    /* --- Header & Navigation (same as index.html) --- */
-  header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  z-index: 10;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 20px 40px;
-  box-sizing: border-box;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  flex-wrap: wrap;
-  background: transparent;
-}
+    /* --- HEADER & NAVIGATION (Copied from contacts.html) --- */
+    header {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 10;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 20px 40px;
+      box-sizing: border-box;
+      border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+      flex-wrap: wrap;
+      background: transparent;
+    }
     nav {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
       align-items: center;
     }
-
     nav a {
       margin: 0 15px;
       text-decoration: none;
-      color: #333;
+      color: #ffffff; /* White text for floating header */
       font-family: sans-serif;
       font-size: 16px;
       letter-spacing: 1px;
       transition: color 0.3s;
+      text-shadow: 0 1px 2px rgba(0,0,0,0.5);
     }
-
     nav a:hover,
     nav a.active {
-      color: #000;
+      color: #fff;
       text-decoration: underline;
     }
-
     .logo img {
       height: 70px;
       width: auto;
@@ -63,39 +61,26 @@
 
     /* --- Mobile Adjustments for header --- */
     @media (max-width: 768px) {
-      header {
-        flex-direction: row;
-        justify-content: space-between;
-        padding: 15px 20px;
-      }
-
-      nav a {
-        margin: 0 8px;
-        font-size: 14px;
-      }
-
-      .logo img {
-        height: 50px;
-      }
+      header { flex-direction: row; justify-content: space-between; padding: 15px 20px; }
+      nav a { margin: 0 8px; font-size: 14px; }
+      .logo img { height: 50px; }
     }
-
     @media (max-width: 480px) {
       header {
-        flex-direction: row;
+        flex-direction: row; /* Kept row as per contacts.html */
         justify-content: space-between;
         align-items: center;
         padding: 10px 15px;
       }
-
       nav a {
         margin: 0 6px;
         font-size: 13px;
       }
-
       .logo img {
         height: 40px;
       }
     }
+
 
     /* --- Hero Section --- */
     .page-hero {
@@ -111,60 +96,18 @@
       position: relative;
       box-sizing: border-box;
     }
-
     .hero-content {
       max-width: 1300px;
       padding: 300px 60px 0 260px;
       box-sizing: border-box;
       color: #ffffff;
       text-shadow: 0 2px 5px rgba(0,0,0,0.4);
-      background-color: transparent;
     }
-
     .hero-content h1 {
-      font-size: 40px;
       font-weight: normal;
       margin: 0 0 20px 0;
       line-height: 1.3;
-    }
-
-    /* --- Mobile adjustments for hero --- */
-    @media (max-width: 1024px) {
-      .hero-content {
-        padding: 100px 40px 0 80px;
-      }
-    }
-
-    @media (max-width: 768px) {
-      .page-hero {
-        height: 60vh;
-        background-position: center center;
-        padding-top: 120px;
-      }
-
-      .hero-content {
-        padding: 100px 30px;
-      }
-
-      .hero-content h1 {
-        font-size: 34px;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .page-hero {
-        height: 50vh;
-        background-position: center;
-        padding-top: 100px;
-      }
-
-      .hero-content {
-        padding: 40px 20px;
-      }
-
-      .hero-content h1 {
-        font-size: 26px;
-      }
+      font-size: clamp(26px, 3vw, 40px);
     }
 
     /* --- Page Content --- */
@@ -174,69 +117,38 @@
       padding: 0 60px;
       text-align: justify;
     }
-
     .page-content h2 {
-      font-size: 26px;
       font-weight: normal;
       color: #000;
       border-bottom: 1px solid #ddd;
       padding-bottom: 10px;
       margin-top: 60px;
+      font-size: clamp(22px, 2vw, 26px);
     }
+    .page-content p { margin-bottom: 20px; }
+    .page-content ul { list-style-type: disc; padding-left: 20px; }
+    .page-content li { margin-bottom: 15px; }
 
-    .page-content p {
-      margin-bottom: 20px;
+    /* --- Mobile Adjustments --- */
+    @media (max-width: 1024px) {
+      .hero-content { padding: 150px 40px 0 80px; }
     }
-
-    .page-content ul {
-      list-style-type: disc;
-      padding-left: 20px;
-    }
-
-    .page-content li {
-      margin-bottom: 15px;
-    }
-
     @media (max-width: 768px) {
-      .page-content {
-        padding: 0 30px;
-        margin: 80px auto;
-      }
+      .page-hero { height: 60vh; }
+      .hero-content { padding: 150px 30px 0 30px; }
+      .page-content { padding: 0 30px; margin: 80px auto; }
     }
-
     @media (max-width: 480px) {
-      .page-content {
-        padding: 0 20px;
-        margin: 60px auto;
-      }
+      .page-hero { height: 50vh; }
+      .hero-content { padding: 120px 20px 0 20px; }
+      .page-content { padding: 0 20px; margin: 60px auto; }
     }
 
-    /* --- Footer (white, same as index.html) --- */
-    footer {
-      text-align: center;
-      font-size: 14px;
-      padding: 40px 20px;
-      background-color: #ffffff;
-      border-top: 1px solid #ddd;
-      font-family: sans-serif;
-      color: #555;
-    }
-
-    .footer-nav a {
-      color: #555;
-      text-decoration: none;
-      margin: 0 15px;
-      transition: color 0.3s;
-    }
-
-    .footer-nav a:hover {
-      color: #000;
-    }
-
-    .copyright {
-      margin-top: 20px;
-      color: #888;
-    }
+    /* --- Footer --- */
+    footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
+    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; transition: color 0.3s; }
+    .footer-nav a:hover { color: #000; }
+    .copyright { margin-top: 20px; color: #999; }
   </style>
 </head>
 
@@ -296,8 +208,7 @@
       <a href="privacy.html">Privacy Policy</a>
     </div>
     <p class="copyright">
-      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company 
-managing the assets of a single family.
+      © 2025, Bergvia Family Office. All Rights Reserved.<br>Bergvia Family Office is a private investment company managing the assets of a single family.
     </p>
   </footer>
 
