--- a/privacy.html
+++ b/privacy.html
@@ -12,10 +12,11 @@
       color: #333; /* Dark text */
       margin: 0;
       line-height: 1.8;
-      font-size: 18px;
+      /* FLUID TYPOGRAPHY for body text */
+      font-size: clamp(16px, 1.2vw, 18px);
     }
 
-    /* --- Header & Navigation --- */
+    /* --- Header & Navigation (As Provided - UNTOUCHED) --- */
     header {
       display: flex;
       justify-content: space-between;
@@ -24,7 +25,6 @@
       box-sizing: border-box;
       border-bottom: 1px solid #eee;
     }
-    
     .nav-left, .nav-right {
       display: flex;
       align-items: center;
@@ -38,7 +38,6 @@
       justify-content: center;
       width: 33.33%;
     }
-
     nav a {
       margin: 0 15px;
       text-decoration: none;
@@ -48,18 +47,15 @@
       letter-spacing: 1px;
       transition: color 0.3s;
     }
-
     nav a:hover, nav a.active {
       color: #000;
       text-decoration: underline;
     }
-
     .logo img {
       height: 70px;
       width: auto;
       max-width: 100%;
       transition: all 0.3s ease;
-      /* No filter needed for black logo on white background */
     }
 
     /* --- Main Content Area --- */
@@ -70,19 +66,21 @@
     }
     
     h1 {
-        font-size: 38px;
         font-weight: normal;
         color: #000;
         margin-bottom: 40px;
         border-bottom: 1px solid #ddd;
         padding-bottom: 20px;
+        /* FLUID TYPOGRAPHY for h1 */
+        font-size: clamp(28px, 3.5vw, 38px);
     }
 
     h2 {
-        font-size: 24px;
         font-weight: normal;
         color: #000;
         margin-top: 40px;
+        /* FLUID TYPOGRAPHY for h2 */
+        font-size: clamp(20px, 2.5vw, 24px);
     }
 
     p {
@@ -97,19 +95,16 @@
     a:hover {
         border-bottom: 1px solid #000;
     }
-
-    /* Remove underline from header/footer links */
     header a, .footer-nav a {
         border-bottom: none;
     }
 
-    /* --- Mobile Adjustments --- */
+    /* --- SIMPLIFIED Mobile Adjustments (Layout only) --- */
     @media (max-width: 768px) {
       header { padding: 15px 20px; }
       .logo img { height: 50px; }
       nav a { margin: 0 8px; font-size: 14px; }
       main { padding: 0 20px; margin-top: 60px; }
-      h1 { font-size: 32px; }
     }
     @media (max-width: 480px) {
       header { flex-direction: column; }
@@ -117,7 +112,6 @@
       .nav-left, .nav-right { width: 100%; justify-content: center; }
       .logo img { height: 45px; }
       main { padding: 0 20px; margin-top: 40px; }
-      h1 { font-size: 28px; }
     }
 
     /* --- Footer Styles --- */
@@ -129,20 +123,9 @@
       border-top: 1px solid #ddd;
       font-family: sans-serif;
     }
-
-    .footer-nav a {
-      color: #555;
-      text-decoration: none;
-      margin: 0 15px;
-      transition: color 0.3s;
-    }
-    .footer-nav a:hover {
-      color: #000;
-    }
-    .copyright {
-      margin-top: 20px;
-      color: #999;
-    }
+    .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; transition: color 0.3s; }
+    .footer-nav a:hover { color: #000; }
+    .copyright { margin-top: 20px; color: #999; }
   </style>
 </head>
 
@@ -151,7 +134,7 @@
   <header>
     <nav class="nav-left">
       <a href="index.html">Bergvia</a> 
-      <a href="about.html">About</a>
+      <a href="about.html">About</a> 
       <a href="investments.html">Investments</a>
     </nav>
     <div class="logo">
