--- a/privacy.html
+++ b/privacy.html
@@ -8,15 +8,14 @@
     /* --- General Body & Font Styles --- */
     body {
       font-family: "Georgia", serif;
-      background-color: #ffffff; /* White background */
-      color: #333; /* Dark text */
+      background-color: #ffffff;
+      color: #333;
       margin: 0;
       line-height: 1.8;
-      /* FLUID TYPOGRAPHY for body text */
       font-size: clamp(16px, 1.2vw, 18px);
     }
 
-    /* --- Header & Navigation (As Provided - UNTOUCHED) --- */
+    /* --- CORRECTED HEADER & NAVIGATION --- */
     header {
       display: flex;
       justify-content: space-between;
@@ -30,22 +29,18 @@
       align-items: center;
       width: 33.33%;
     }
-    .nav-right {
-      justify-content: flex-end;
-    }
-    .logo {
-      display: flex;
-      justify-content: center;
-      width: 33.33%;
-    }
+    .nav-left { justify-content: flex-start; }
+    .nav-right { justify-content: flex-end; }
+    .logo { display: flex; justify-content: center; width: 33.33%; }
     nav a {
       margin: 0 15px;
       text-decoration: none;
-      color: #555; /* Dark grey for nav links on white header */
+      color: #555;
       font-family: sans-serif;
       font-size: 16px;
       letter-spacing: 1px;
       transition: color 0.3s;
+      white-space: nowrap;
     }
     nav a:hover, nav a.active {
       color: #000;
@@ -64,49 +59,33 @@
       margin: 80px auto;
       padding: 0 40px;
     }
-    
     h1 {
-        font-weight: normal;
-        color: #000;
-        margin-bottom: 40px;
-        border-bottom: 1px solid #ddd;
-        padding-bottom: 20px;
-        /* FLUID TYPOGRAPHY for h1 */
-        font-size: clamp(28px, 3.5vw, 38px);
+      font-weight: normal;
+      color: #000;
+      margin-bottom: 40px;
+      border-bottom: 1px solid #ddd;
+      padding-bottom: 20px;
+      font-size: clamp(28px, 3.5vw, 38px);
     }
-
     h2 {
-        font-weight: normal;
-        color: #000;
-        margin-top: 40px;
-        /* FLUID TYPOGRAPHY for h2 */
-        font-size: clamp(20px, 2.5vw, 24px);
+      font-weight: normal;
+      color: #000;
+      margin-top: 40px;
+      font-size: clamp(20px, 2.5vw, 24px);
     }
+    p { margin-bottom: 20px; }
+    a { color: #333; text-decoration: none; border-bottom: 1px dotted #555; }
+    a:hover { border-bottom: 1px solid #000; }
+    header a, .footer-nav a { border-bottom: none; }
 
-    p {
-        margin-bottom: 20px;
-    }
-
-    a {
-        color: #333;
-        text-decoration: none;
-        border-bottom: 1px dotted #555;
-    }
-    a:hover {
-        border-bottom: 1px solid #000;
-    }
-    header a, .footer-nav a {
-        border-bottom: none;
-    }
-
-    /* --- SIMPLIFIED Mobile Adjustments (Layout only) --- */
+    /* --- CORRECTED Mobile Adjustments --- */
     @media (max-width: 768px) {
       header { padding: 15px 20px; }
       .logo img { height: 50px; }
       nav a { margin: 0 8px; font-size: 14px; }
       main { padding: 0 20px; margin-top: 60px; }
     }
-    @media (max-width: 480px) {
+    @media (max-width: 600px) {
       header { flex-direction: column; }
       .logo { order: -1; margin-bottom: 15px; }
       .nav-left, .nav-right { width: 100%; justify-content: center; }
@@ -115,26 +94,18 @@
     }
 
     /* --- Footer Styles --- */
-    footer {
-      text-align: center;
-      font-size: 14px;
-      padding: 40px 20px;
-      background-color: #f8f8f8;
-      border-top: 1px solid #ddd;
-      font-family: sans-serif;
-    }
+    footer { text-align: center; font-size: 14px; padding: 40px 20px; background-color: #f8f8f8; border-top: 1px solid #ddd; font-family: sans-serif; }
     .footer-nav a { color: #555; text-decoration: none; margin: 0 15px; transition: color 0.3s; }
     .footer-nav a:hover { color: #000; }
     .copyright { margin-top: 20px; color: #999; }
   </style>
 </head>
-
 <body>
 
   <header>
     <nav class="nav-left">
-      <a href="index.html">Bergvia</a> 
-      <a href="about.html">About</a> 
+      <a href="index.html">Home</a> 
+      <a href="about.html">About</a>
       <a href="investments.html">Investments</a>
     </nav>
     <div class="logo">
@@ -177,7 +148,7 @@
     <h2>9. Contact</h2>
     <p>For any privacy-related inquiries, please contact us at:<br>
     Xtraxfin SA<br>
-    Email: <a href="mailto:privacy@bergvia.ch">privacy@bergvia.com</a><br>
+    Email: <a href="mailto:privacy@bergvia.com">privacy@bergvia.com</a><br>
     Registered Office: Pfäffikon, SZ, Switzerland</p>
   </main>
 
